Fix footer overlap

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -262,8 +262,6 @@ a.broken {
 ------------------------- */
 
 #swagger-ui {
-    height: calc(100vh - var(--navbar-height));
-    min-height: 600px;
     width: 100%;
   }
 
